--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         
         <meta content="" property="og:title"
         <meta content="" property="og:description">
-        <meta content="https://media4.giphy.com/media/l0HUqsz2jdQYElRm0/giphy.mp4" property="og:mp4" />
+        <meta content="https://scontent.fkun1-1.fna.fbcdn.net/v/t31.0-8/11247602_517169765101253_3726492847637389311_o.jpg?_nc_cat=111&_nc_sid=09cbfe&_nc_ohc=i-LlBtQaOBUAX9mrY6v&_nc_ht=scontent.fkun1-1.fna&oh=84585dc6a812bd8bd963bd0402dadc8c&oe=5FA7E9E4" property="og:image" />
         <meta name="theme-color" content="#undefined">
         <link type="application/json+oembed" href="https://test.rauf.workers.dev/oembed?author=word you want" />
       </head>
