--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <link type="application/json+oembed" href="https://test.rauf.workers.dev/oembed?author=undefined">
       </head>
       <body>
+
+<form action="https://youareanidiot.cc">
+    <button type="dont press me"> </button>
+          </form>
+
         <p>bye</p>
       
     
