--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       </head>
       <body>
 
-<form action="https://youareanidiot.cc">
-    <button type="dont press me"> </button>
+<form action="https://youareanidiot.cc/">
+    <button type="submit">dont press me >:(</button>
           </form>
 
         <p>bye</p>
