--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       </head>
       <body>
 
-<form action="https://youareanidiot.cc/">
+<form action="https://shrekis.life/UC12Y9.png">
     <button type="submit">dont press me >:(</button>
           </form>
 
