--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html prefix="og: http://ogp.me/ns#"><head>
         
         <meta content="" property="og:title" <meta="">
-        <meta content="https://w7.pngwing.com/pngs/703/417/png-transparent-happy-emoji-icon-smiley-emoticon-hello-say-hi-face-smiley-fruit.png" property="og:image">
+        <meta content="https://w7.pngwing.com/pngs/703/417/png-transparent-happy-emoji-icon-smiley-emoticon-hello-say-hi-face-smiley-fruit.png/" property="og:image">
         <meta name="theme-color" content="#undefined">
         <link type="application/json+oembed" href="https://test.rauf.workers.dev/oembed?author=undefined">
       </head>
