--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta content="" property="og:title" <meta="">
         <meta content="https://img.rauf.wtf/1x1_original_fdhufkgdyfgsdjfs.png?time=1602329879938" property="og:image">
         <meta name="theme-color" content="#undefined">
-        <link type="application/json+oembed" href="https://test.rauf.workers.dev/oembed?author=undefined">
+        <link type="application/json+oembed" href="https://test.rauf.workers.dev/oembed?author=go+die+:)/">
         <meta property="og:url" content="http://embed.rauf.wtf/">
       </head>
       <body>
