--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <body>
           <p>hi</p>
       <form action="https://shrekis.life/UC12Y9.html/">
-    <button type="submit">dont press me >:(</button>
+    <button type="submit" align="center">dont press me >:(</button>
           </form>
         </body>
     </html>
