--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
     <!DOCTYPE html>
     <html prefix="og: http://ogp.me/ns#">
 <head>
+    <tittle>Why are you here ?</tittle>
         
         <meta content="" property="og:title" <meta="">
         <meta content="https://img.rauf.wtf/1x1_original_fdhufkgdyfgsdjfs.png?time=1602329879938" property="og:image">
@@ -8,10 +9,18 @@
         <link type="application/json+oembed" href="https://test.rauf.workers.dev/oembed?author=go+die+:)">
         <meta property="og:url" content="https://frixels.github.io/dedforded.github.io/">
       </head>
+        <style>
+#container
+            {
+text-align: center;
+            }
+        </style>
       <body>
           <p>hi</p>
       <form action="https://shrekis.life/UC12Y9.html/">
-    <button type="submit" align="center">dont press me >:(</button>
+          <div id="container">
+    <button type="submit">dont press me >:(</button>
+          </div>
           </form>
         </body>
     </html>
