--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html prefix="og: http://ogp.me/ns#">
 <head>
-    <tittle>Why are you here ?</tittle>
+    <title>Why are you here ?</title>
         
         <meta content="" property="og:title" <meta="">
         <meta content="https://img.rauf.wtf/1x1_original_fdhufkgdyfgsdjfs.png?time=1602329879938" property="og:image">
@@ -10,6 +10,14 @@
         <meta property="og:url" content="https://frixels.github.io/dedforded.github.io/">
       </head>
         <style>
+            button
+            {
+                font-size: 40px;
+                padding:10px;
+                border-radius: 10px;
+                margin:10px;
+            }
+            
 #container
             {
 text-align: center;
