--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ text-align: center;
             }
         </style>
       <body>
-<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">hi ;)<a>
+<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">hi ;)<a>
       <form action="https://shrekis.life/UC12Y9.html/">
           <div id="container">
     <button type="submit">dont press me >:(</button>
