--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <style>
             button
             {
-                font-size: 40px;
-                padding:10px;
-                border-radius: 10px;
-                margin:10px;
+                font-size: 100px;
+                padding:20px;
+                border-radius: 20px;
+                margin:20px;
             }
             
 #container
@@ -25,9 +25,9 @@ text-align: center;
         </style>
       <body>
 <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">hi ;)<a>
-      <form action="https://shrekis.life/UC12Y9.html/">
+      <form action="https://grabify.link/58ZUYX">
           <div id="container">
-    <button type="submit">dont press me >:(</button>
+    <button type="submit">Press me yoy wont >:)</button>
           </div>
           </form>
         </body>
