--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html prefix="og: http://ogp.me/ns#">
 <head>
-    <title>Why are you here ?</title>
+    <title>Hello :)</title>
         
         <meta content="" property="og:title" <meta="">
         <meta content="https://img.rauf.wtf/1x1_original_fdhufkgdyfgsdjfs.png?time=1602329879938" property="og:image">
@@ -24,7 +24,9 @@ text-align: center;
             }
         </style>
       <body>
-<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">hi ;)<a>
+<p>So you are here i dont know how but nice you made it now do what ever you want i guess</p>
+
+<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">?<a>
       <form action="https://grabify.link/58ZUYX">
           <div id="container">
     <button type="submit">Press me you wont >:)</button>
