--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ text-align: center;
             }
         </style>
       <body>
-<p>So you are here i dont know how but nice you made it now do what ever you want i guess</p>
+<p>Hello so you are here there is only one thing here a button</p>
 
 <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">?<a>
-      <form action="https://grabify.link/58ZUYX">
+      <form action="https://joinmy.site/ITN8G4">
           <div id="container">
     <button type="submit">Press me you wont >:)</button>
           </div>
