--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@ text-align: center;
             }
         </style>
       <body>
-<p>Hello so you are here there is only one thing here a button</p>
+<p>Hello welcome to my webside there is nothing much here just an discord invite link have a nice day :D</p>
 
 <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">?<a>
       <form action="https://leancoding.co/join.php?id=MBTXD3.html)">
           <div id="container">
-    <button type="submit">Press me you wont >:)</button>
+    <button type="submit">Join my weird discord server :D</button>
           </div>
           </form>
+    
         </body>
     </html>
  
