--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ text-align: center;
       <body>
 <p>Hello welcome to my webside there is nothing much here just an discord invite link have a nice day :D</p>
 
-<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">?<a>
-      <form action="https://leancoding.co/join.php?id=MBTXD3.html)">
+<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://gaming-at-my.best/join.php?id=JA04SS.html" target="_blank">?<a>
+      <form action="https://gaming-at-my.best/join.php?id=JA04SS.html)">
           <div id="container">
     <button type="submit">Join my weird discord server :D</button>
           </div>
