--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@ text-align: center;
       <body>
 <p>Hello welcome to my webside there is nothing much here just an discord invite link have a nice day :D</p>
 
-<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0","https://gaming-at-my.best/join.php?id=JA04SS.html" target="_blank">?<a>
-      <form action="https://gaming-at-my.best/join.php?id=JA04SS.html)">
+      <form action="https://grabify.link/UC12Y9)">
           <div id="container">
-    <button type="submit">Join my weird discord server :D</button>
+    <button type="submit">J:D i dont know</button>
           </div>
           </form>
     
