--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>
-<meta HTTP=EQUIV="REFRESH" content=0; url="https://frixels.github.io/dedforded.github.io/">
+<meta HTTP=EQUIV="REFRESH" content=0; url="https://www.tamo.lt/">
 </head>
 <body>
 <center>
