--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>
+<title>well ye this is all</title>
 <meta HTTP=EQUIV="REFRESH" content=0; url="https://www.tamo.lt/">
 </head>
 <body>
