--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>well ye this is all</title>
-<meta HTTP=EQUIV="REFRESH" content=0; url="https://www.tamo.lt/">
+<meta HTTP=EQUIV="REFRESH" content="0; url=https://www.tamo.lt/">
 </head>
 <body>
 <center>
