--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 <title>well ye this is all</title>
-<meta HTTP=EQUIV="REFRESH" content="0; url=https://www.tamo.lt">
+<meta http-equiv="refresh" content="time; URL=https://i.ytimg.com/vi/jVbMp10jyRY/maxresdefault.jpg" />
 </head>
 <body>
 <center>
-<h1>Idk yes<h1>
+<h1>Hello wassap why are you here LMFAO Well leave i guess<h1>
 </center>
 </body>
 </html>
