--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
+  <!DOCTYPE html>
 <html>
-<head>
-<title>well ye this is all</title>
-<meta http-equiv="refresh" content="time; URL=https://i.ytimg.com/vi/jVbMp10jyRY/maxresdefault.jpg" />
-</head>
-<body>
-<center>
-<h1>Hello wassap why are you here LMFAO Well leave i guess<h1>
-</center>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="1; url='http://www.screenprank.com/gandalf.html'" />
+  </head>
+  <body>
+    <p>Wassap ;) <a href="http://www.screenprank.com/gandalf.html">this link</a>.</p>
+  </body>
 </html>
