--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
   <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="1; url='http://www.screenprank.com/gandalf.html'" />
   </head>
-  <body>
-    <p>Wassap ;) <a href="http://www.screenprank.com/gandalf.html">this link</a>.</p>
+  <body bgcolor="#130C0B">
+    <p>Wassap</p>
   </body>
 </html>
