--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
   <head>
   </head>
-  <body bgcolor="#130C0B">
-    <p>Wassap</p>
+  <title>Admin Hub Page In Progress</title>
+  <link rel="stylesheet" href="style.css">
+  <body bgcolor="#1C1A1A">
+  <nav>
+<button class="HatList">Hat list for scripts</button>
+<button class="idk">comming soon</button>
+</nav>
   </body>
 </html>
