--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <body bgcolor="#1C1A1A">
   <nav>
-<button class="HatList">Hat list for scripts</button>
+<button class="HatList">Test</button>
 <button class="idk">comming soon</button>
 </nav>
   </body>
